Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-58226

KV disk failure stats call down to magma for magma buckets unnecessarily

    XMLWordPrintable

Details

    • 0
    • KV 2023-4

    Description

      We call down to the KVStore for the failure_get stat but the MagmaKVStore getStats call always calls down to magma (which is unnecessary and out of our control).

      Attachments

        For Gerrit Dashboard: MB-58226
        # Subject Branch Project Status CR V

        Activity

          People

            owend Daniel Owen
            ben.huddleston Ben Huddleston
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty