MB-58226 Retrieve disk failure stats without call to Magma

Previously MagmaKVStore getStats would always call down to magma
unnecessarily when disk failure stats is all we require. In this patch,
MagmaKVStore getStats is changed to no longer call into magma if disk
failure is the only stat required.

+Testing+

Testing was carried out on a single Magma bucket with ~12GB of data
present in magma, whilst under 1000 operations per second. The following
command was used to achieve this: cbc-pillowfight -I 4000000 -U
'couchbase://127.0.0.1:12000/default' -u Administrator -P asdasd -B
1000. To simulate a STAT("disk-failures") call the following command was
called 10,000 times using a bash script: cbstats -u Administrator
-p asdasd 127.0.0.1:12000 disk-failures. Then the histograms from
cbstats stat-timings before and after this change were recorded.

+Result+

Retrieving 'disk-failures' stats reduced to sub millisecond latency,
0.288ms on average. Before this change to retrieve 'disk-failures' stat
took 87ms on average. The histograms recorded can be seen below.

stat-timings before this change:

stat:disk-failures (10000 total)
    3455us - 3711us : ( 53.2953%) 1329 #####################
    3711us - 3839us : ( 58.1558%)  486 #######
    3839us - 3967us : ( 62.3062%)  415 ######
    3967us - 4095us : ( 66.1566%)  385 ######
    4095us - 4351us : ( 72.1872%)  603 #########
    4351us - 4607us : ( 76.5777%)  439 #######
    4607us - 4863us : ( 80.1880%)  361 #####
    4863us - 4863us : ( 80.1880%)    0
    4863us - 5119us : ( 82.9883%)  280 ####
    5119us - 5375us : ( 85.2685%)  228 ###
    5375us - 5887us : ( 88.3488%)  308 #####
    5887us - 6143us : ( 89.6090%)  126 ##
    6143us - 6399us : ( 90.6691%)  106 #
    6399us - 6655us : ( 91.5692%)   90 #
    6655us - 7167us : ( 92.9393%)  137 ##
    7167us - 7679us : ( 93.8194%)   88 #
    7679us - 8191us : ( 94.5895%)   77 #
    8191us - 8703us : ( 95.1995%)   61
    8703us - 9215us : ( 95.6796%)   48
    9215us -   10ms : ( 96.2996%)   62 #
      10ms -   13ms : ( 96.9997%)   70 #
      13ms -   14ms : ( 97.1897%)   19
      14ms -   17ms : ( 97.5198%)   33
      17ms -   21ms : ( 97.8198%)   30
      21ms -   31ms : ( 98.1398%)   32
      31ms -   45ms : ( 98.4998%)   36
      45ms -   51ms : ( 98.6299%)   13
      51ms -   59ms : ( 98.7899%)   16
      59ms -   69ms : ( 98.9099%)   12
      69ms -   90ms : ( 99.1099%)   20
      90ms -   98ms : ( 99.2399%)   13
      98ms -  110ms : ( 99.2999%)    6
     110ms -  122ms : ( 99.3999%)   10
     122ms -  139ms : ( 99.4799%)    8
     139ms -  163ms : ( 99.5700%)    9
     163ms -  172ms : ( 99.6100%)    4
     172ms -  204ms : ( 99.6700%)    6
     204ms -  212ms : ( 99.6900%)    2
     212ms -  237ms : ( 99.7400%)    5
     237ms -  253ms : ( 99.7900%)    5
     253ms -  278ms : ( 99.8500%)    6
     278ms -  278ms : ( 99.8500%)    0
     278ms -  327ms : ( 99.8800%)    3
     327ms -  344ms : ( 99.9000%)    2
     344ms -  360ms : ( 99.9100%)    1
     360ms -  376ms : ( 99.9300%)    2
     376ms -  376ms : ( 99.9300%)    0
     376ms -  393ms : ( 99.9400%)    1
     393ms -  458ms : ( 99.9500%)    1
     458ms -  491ms : ( 99.9600%)    1
     491ms -  491ms : ( 99.9600%)    0
     491ms -  557ms : ( 99.9700%)    1
     557ms -  557ms : ( 99.9700%)    0
     557ms -  622ms : ( 99.9800%)    1
     622ms -  622ms : ( 99.9800%)    0
     622ms - 1114ms : ( 99.9900%)    1
    1114ms - 1114ms : ( 99.9900%)    0
    1114ms - 7077ms : (100.0000%)    1
      60s - inf     : (overflow )    1
    Avg             : (   87ms)

stat-timings after this change:

stat:disk-failures (10000 total)
      83us -  103us : ( 50.7800%)  955 ###############
     103us -  115us : ( 55.4000%)  462 #######
     115us -  135us : ( 60.7300%)  533 ########
     135us -  159us : ( 65.5400%)  481 #######
     159us -  191us : ( 70.3100%)  477 #######
     191us -  239us : ( 75.5600%)  525 ########
     239us -  271us : ( 78.2300%)  267 ####
     271us -  303us : ( 80.3700%)  214 ###
     303us -  351us : ( 83.1600%)  279 ####
     351us -  399us : ( 85.3500%)  219 ###
     399us -  479us : ( 87.8100%)  246 ####
     479us -  543us : ( 89.3700%)  156 ##
     543us -  607us : ( 90.4900%)  112 #
     607us -  671us : ( 91.4500%)   96 #
     671us -  735us : ( 92.5200%)  107 #
     735us -  863us : ( 93.7700%)  125 ##
     863us -  959us : ( 94.6600%)   89 #
     959us - 1023us : ( 95.1200%)   46
    1023us - 1151us : ( 95.8200%)   70 #
    1151us - 1279us : ( 96.3200%)   50
    1279us - 1471us : ( 96.9200%)   60
    1471us - 1599us : ( 97.2700%)   35
    1599us - 1727us : ( 97.6900%)   42
    1727us - 1855us : ( 97.9500%)   26
    1855us - 2047us : ( 98.2000%)   25
    2047us - 2303us : ( 98.5600%)   36
    2303us - 2431us : ( 98.6700%)   11
    2431us - 2559us : ( 98.8000%)   13
    2559us - 2815us : ( 98.9100%)   11
    2815us - 3199us : ( 99.0700%)   16
    3199us - 3583us : ( 99.2500%)   18
    3583us - 3839us : ( 99.3200%)    7
    3839us - 4351us : ( 99.4500%)   13
    4351us - 4607us : ( 99.5100%)    6
    4607us - 5119us : ( 99.5800%)    7
    5119us - 5375us : ( 99.6300%)    5
    5375us - 5631us : ( 99.6600%)    3
    5631us - 5887us : ( 99.6900%)    3
    5887us - 6655us : ( 99.7300%)    4
    6655us - 7167us : ( 99.7700%)    4
    7167us - 7935us : ( 99.8100%)    4
    7935us - 8191us : ( 99.8300%)    2
    8191us - 8703us : ( 99.8800%)    5
    8703us - 8703us : ( 99.8800%)    0
    8703us - 9215us : ( 99.8900%)    1
    9215us -   10ms : ( 99.9100%)    2
      10ms -   11ms : ( 99.9200%)    1
      11ms -   11ms : ( 99.9300%)    1
      11ms -   12ms : ( 99.9500%)    2
      12ms -   12ms : ( 99.9500%)    0
      12ms -   15ms : ( 99.9600%)    1
      15ms -   15ms : ( 99.9600%)    0
      15ms -   21ms : ( 99.9700%)    1
      21ms -   21ms : ( 99.9700%)    0
      21ms -   22ms : ( 99.9800%)    1
      22ms -   22ms : ( 99.9800%)    0
      22ms -   28ms : ( 99.9900%)    1
      28ms -   28ms : ( 99.9900%)    0
      28ms -   29ms : (100.0000%)    1
    Avg             : (  288us)

Change-Id: I1d762859435fe5dcd4a1675e74448efc9aabb8b7
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/195507
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Mohammad Zaeem <mohammad.zaeem@couchbase.com>